# ParaTranz-SDK-python

./: .gitlab-ci.yml  .openapi-generator-ignore  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
docs/: Artifact.md  ArtifactsApi.md  Comment.md  CreateFile200Response.md  CreateIssueRequest.md  EditMemberRequest.md  File.md  FilesApi.md  GetFileRevisions200Response.md  GetHistory200Response.md  GetIssue200Response.md  GetIssues200Response.md  GetIssues200ResponseResultsInner.md  GetMails200Response.md  GetProjects200ResponseInner.md  GetScores200Response.md  GetStrings200Response.md  GetTermHistory200Response.md  GetTerms200Response.md  History.md  HistoryApi.md  HistoryTarget.md  ImportTerms200Response.md  Issue.md  IssuesApi.md  Job.md  Mail.md  MailFromUser.md  MailsApi.md  Member.md  MembersApi.md  OperateIssueRequest.md  Permission.md  Project.md  ProjectsApi.md  Reply.md  Revision.md  SaveFileRequest.md  SaveUserRequest.md  Score.md  (+10 more)
paratranz_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  schemas.py
test/: test_artifact.py  test_artifacts_api.py  test_comment.py  test_create_file200_response.py  test_create_issue_request.py  test_edit_member_request.py  test_file.py  test_files_api.py  test_get_file_revisions200_response.py  test_get_history200_response.py  test_get_issue200_response.py  test_get_issues200_response.py  test_get_issues200_response_results_inner.py  test_get_mails200_response.py  test_get_projects200_response_inner.py  test_get_scores200_response.py  test_history.py  test_job.py  (+32 more)
(+369 files in other folders)
