[tool.poetry]
name = "paratranz_client"
version = "3.0.4"
description = "ParaTranz OpenAPI 文档"
authors = ["OpenAPI Generator Community <master@mail.paratranz.com>"]
license = "NoLicense"
readme = "README.md"
repository = "https://github.com/MuXiu1997/ParaTranz-SDK-python"
keywords = ["OpenAPI", "OpenAPI-Generator", "ParaTranz OpenAPI 文档"]
include = ["paratranz_client/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
aiohttp = ">= 3.8.4"
aiohttp-retry = ">= 2.8.3"
pydantic = ">=2"
typing-extensions = ">=4.7.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
